<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edtEscola"
                android:inputType="none">
            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/edtObservador" >
            </EditText>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@string/edtData" >
            </EditText>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/edtTotalSED" >
            </EditText>

            <EditText
                android:id="@+id/editText5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/edtNome" >
            </EditText>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/txtSexo"
                    android:layout_gravity="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtMasculino"
                    android:checked="false"
                    android:layout_gravity="center_horizontal">
                </RadioButton>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtFeminino"
                    android:checked="false"
                    android:layout_gravity="center_horizontal">
                </RadioButton>

            </LinearLayout>

            <EditText
                android:id="@+id/editText6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/edtIdade" >
            </EditText>

            <EditText
                android:id="@+id/editText7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/edtTotaldecrianças" >
            </EditText>

            <EditText
                android:id="@+id/editText8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/edtTotaldeadultos" >
            </EditText>

            <EditText
                android:id="@+id/editText9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:text="@string/edtHora" >
            </EditText>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="2 Minutos" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />


                    <EditText
                        android:id="@+id/editText13"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@string/edtParticipação" />


                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvNíveldeEnvolvimento"
                            android:layout_column="0"
                            android:gravity="center_horizontal"/>

                        <Spinner
                            android:id="@+id/envolvimento_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/envolvimento_array"
                            android:prompt="@string/envolvimento_prompt"
                            android:layout_column="1"/>

                    </TableRow>


                    <!--por a aparecer os dados gravados da bd-->
                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvExperiênciasdeaprendizagem"
                            android:layout_column="0"
                            android:gravity="center_horizontal"/>

                        <Spinner
                            android:id="@+id/aprendizagem_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/aprendizagem_array"
                            android:prompt="@string/aprendizagem_prompt"
                            android:layout_column="1"/>

                    </TableRow>

                </TableLayout>

            </TableLayout>

            <Button
                android:id="@+id/btRetroceder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btRetroceder"
                android:onClick="btRetroceder_click"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
