<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/edtEscola" >

            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/edtObservador" >

            </EditText>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@string/edtData" >
            </EditText>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/edtNomedoAdulto" >

            </EditText>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/txtSexo"
                    android:layout_gravity="center" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtMasculino"
                    android:checked="false"
                    android:layout_gravity="center_horizontal">
                </RadioButton>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtFeminino"
                    android:checked="false"
                    android:layout_gravity="center_horizontal">
                </RadioButton>

            </LinearLayout>

            <EditText
                android:id="@+id/editText5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/edtTotaldecrianças" >

            </EditText>

            <EditText
                android:id="@+id/editText6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/edtNúmerodeadultos" >

            </EditText>

            <EditText
                android:id="@+id/editText7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/edtTotalSED" >

            </EditText>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Observações de dois minutos"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:text="@string/edtHora" >
            </EditText>


            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                    <!-- Row 1 with single column -->
                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvSensibilidade"
                            android:layout_column="0"/>

                        <Spinner
                            android:id="@+id/sensibilidade_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/sensibilidade_array"
                            android:prompt="@string/sensibilidade_prompt"
                            android:layout_column="1"/>


                    </TableRow>

                    <!-- Row 1 with single column -->
                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvEstimulação"
                            android:layout_column="0"/>

                        <Spinner
                            android:id="@+id/Estimulação_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/estimulação_array"
                            android:prompt="@string/estimulação_prompt"
                            android:layout_column="1"/>

                    </TableRow>

                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvAutonomia"
                            android:layout_column="0" />


                        <Spinner
                            android:id="@+id/Autonomia_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/autonomia_array"
                            android:prompt="@string/autonomia_prompt"
                            android:layout_column="1"/>

                    </TableRow>


                   <!-- &lt;!&ndash; Row 1 with single column &ndash;&gt;
                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvSensibilidade"
                            android:layout_column="0"/>

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt5"
                            android:checked="false"
                            android:layout_column="1" />

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt4"
                            android:checked="false"
                            android:layout_column="2" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt3"
                            android:checked="false"
                            android:layout_column="3" />

                        <RadioButton
                            android:id="@+id/radioButton6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt2"
                            android:checked="false"
                            android:layout_column="4"
                             />

                        <RadioButton
                            android:id="@+id/radioButton7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt1"
                            android:checked="false"
                            android:layout_column="5" />

                        <RadioButton
                            android:id="@+id/radioButton8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbtND"
                            android:checked="false"
                            android:layout_column="6"
                             />

                    </TableRow>


                    &lt;!&ndash; Row 1 with single column &ndash;&gt;
                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvEstimulação"
                            android:layout_column="0"/>

                        <RadioButton
                            android:id="@+id/radioButton9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt5"
                            android:checked="false"
                            android:layout_column="1" />

                        <RadioButton
                            android:id="@+id/radioButton10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt4"
                            android:checked="false"
                            android:layout_column="2" />

                        <RadioButton
                            android:id="@+id/radioButton11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt3"
                            android:checked="false"
                            android:layout_column="3"
                            />

                        <RadioButton
                            android:id="@+id/radioButton12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt2"
                            android:checked="false"
                            android:layout_column="4" />

                        <RadioButton
                            android:id="@+id/radioButton13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt1"
                            android:checked="false"
                            android:layout_column="5"
                            />

                        <RadioButton
                            android:id="@+id/radioButton14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbtND"
                            android:checked="false"
                            android:layout_column="6" />

                    </TableRow>

                    &lt;!&ndash; Row 1 with single column &ndash;&gt;
                    <TableRow
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent" >

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvAutonomia"
                            android:layout_column="0"/>

                        <RadioButton
                            android:id="@+id/radioButton15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt5"
                            android:checked="false"
                            android:layout_column="1" />

                        <RadioButton
                            android:id="@+id/radioButton16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt4"
                            android:checked="false"
                            android:layout_column="2"
                             />

                        <RadioButton
                            android:id="@+id/radioButton17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt3"
                            android:checked="false"
                            android:layout_column="3"
                             />

                        <RadioButton
                            android:id="@+id/radioButton18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt2"
                            android:checked="false"
                            android:layout_column="4"
                             />

                        <RadioButton
                            android:id="@+id/radioButton19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbt1"
                            android:checked="false"
                            android:layout_column="5"
                             />

                        <RadioButton
                            android:id="@+id/radioButton20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rbtND"
                            android:checked="false"
                            android:layout_column="6"
                             />

                    </TableRow>-->

                </TableLayout>

            </TableLayout>

            <Button
                android:id="@+id/btRetroceder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btRetroceder"
                android:onClick="btRetroceder_click"/>

            <Button
                android:id="@+id/btOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btOK"
                android:onClick="btOK_click"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>